:sparkles: use ramdajs

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cloudflare4": "^0.2.5",
     "country-data": "^0.0.31",
     "ip": "^1.1.5",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "ramda": "^0.25.0"
   }
 }
